// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show indicator loading 1`] = `
<Portal.Host>
  <Context.Provider
    value={
      Object {
        "icon": [Function],
      }
    }
  >
    <ThemeProvider
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
    >
      <ForwardRef(NavigationContainer)>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5FCFF",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <ForwardRef />
        </View>
      </ForwardRef(NavigationContainer)>
    </ThemeProvider>
  </Context.Provider>
</Portal.Host>
`;

exports[`should show screens 1`] = `
<Portal.Host>
  <Context.Provider
    value={
      Object {
        "icon": [Function],
      }
    }
  >
    <ThemeProvider
      theme={
        Object {
          "animation": Object {
            "scale": 1,
          },
          "colors": Object {
            "accent": "#03dac4",
            "backdrop": "rgba(0, 0, 0, 0.5)",
            "background": "#f6f6f6",
            "disabled": "rgba(0, 0, 0, 0.26)",
            "error": "#B00020",
            "notification": "#f50057",
            "onBackground": "#000000",
            "onSurface": "#000000",
            "placeholder": "rgba(0, 0, 0, 0.54)",
            "primary": "#6200ee",
            "surface": "#ffffff",
            "text": "#000000",
          },
          "dark": false,
          "fonts": Object {
            "light": Object {
              "fontFamily": "System",
              "fontWeight": "300",
            },
            "medium": Object {
              "fontFamily": "System",
              "fontWeight": "500",
            },
            "regular": Object {
              "fontFamily": "System",
              "fontWeight": "400",
            },
            "thin": Object {
              "fontFamily": "System",
              "fontWeight": "100",
            },
          },
          "roundness": 4,
        }
      }
    >
      <ForwardRef(NavigationContainer)>
        <StackNavigator>
          <Screen
            component={[Function]}
            name="Companies"
          />
          <Screen
            component={[Function]}
            name="AddCompany"
          />
        </StackNavigator>
      </ForwardRef(NavigationContainer)>
    </ThemeProvider>
  </Context.Provider>
</Portal.Host>
`;
